# tidali

./: .gitignore  Main.hs  Makefile  README.md  SimpleHint.hs  install.sh  make-haskell-libs.sh  stack.yaml  tidali.cabal
haskell-libs/: platformConstants  settings
haskell-libs/base-4.9.1.0/: Foreign.dyn_hi  Foreign.hi  Numeric.dyn_hi  Numeric.hi  Prelude.dyn_hi  Prelude.hi
haskell-libs/network-2.7.0.2-JRB6uWX4Tmg3gJJhGUspug/: Network.dyn_hi  Network.hi
haskell-libs/package.conf.d/: SHA-1.6.4.4-IvJ6n27tJ5Y52woNEDQjIQ.conf  async-2.2.1-4Lwnc5qsdIO2A0ApZdshfQ.conf  attoparsec-0.13.2.2-IsKn6fMONXo9F8mRrF9EGK.conf  base-4.9.1.0.conf  base64-bytestring-1.0.0.1-4O9TExPPz6eI82Yj7L4SIj.conf  blaze-builder-0.4.1.0-4OcNExanBf8J8Z6c26eN6x.conf  bytestring-builder-0.10.8.1.0-30aSViw6wlPG7nW7mKnkOj.conf  case-insensitive-1.2.0.11-3x5TLozZsR88Pfm5BwWPGl.conf  colour-2.3.4-Ea5u6v6eyBiFPYOJLx0tkh.conf  data-binary-ieee754-0.4.4-7iiF2mP1jcB6tVSPgIyBOi.conf  entropy-0.4.1.1-GspBY4Tf5KdE16aeOyICaL.conf  ghc-prim-0.5.0.0.conf  hashable-1.2.7.0-3hg2TEghlsEJmDAYciLYpr.conf  hosc-0.16-KOI9LVnz6oF50KtTMchpUw.conf  integer-gmp-1.0.0.1.conf  integer-logarithms-1.0.2.1-4E5xzxuzZpwC9WLRIYXsdM.conf  mersenne-random-pure64-0.2.2.0-560i5rQoI3i9IX3BgSFLBV.conf  mtl-2.2.2-IUStvhCM9Fb6Pb0KlPCV7h.conf  network-2.7.0.2-JRB6uWX4Tmg3gJJhGUspug.conf  package.cache  parsec-3.1.13.0-CWUfkFJmzimAN0tMXMRlBN.conf  primitive-0.6.4.0-GNLAlD4yr117oBmLUp0dWo.conf  random-1.1-9tceXaeYIMZ4JrKq20Egog.conf  rts.conf  safe-0.3.17-JJATzLtNCBm6FjlfCoRVpi.conf  (+8 more)
src/: Main.hs  Simple.hs
(+1030 files in other folders)
