name:                tidali
version:             0.1.0
-- synopsis:
-- description:
license:             GPL-3
author:              Johannes Waldmann, Alex McLean, Damián Silvani
maintainer:          alex@slab.org
build-type:          Simple
cabal-version:       >=1.10

executable tidali
  hs-source-dirs: src
  main-is: Main.hs
  other-modules:
      Sound.Tidal.Safe.Context
    , Sound.Tidal.Safe.Boot
  build-depends:
      base
    , tidal==1.4.9
    , mtl
    , hint
    -- , readline
    , exceptions
    , async
  default-language: Haskell2010
  ld-options: -Wl,-rpath -Wl,$ORIGIN/c-libs
